manifest/deploy2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodecontainer
        image: IMAGE:$GITHUB_SHA
        ports:
        - containerPort: 80



---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
